# MARKETINglegends

./: Makefile.am  README.md  code_of_conduct.md  configure.ac  libzcashconsensus.pc.in
build-aux/m4/: ax_boost_base.m4  ax_boost_chrono.m4  ax_boost_filesystem.m4  ax_boost_system.m4  ax_boost_unit_test_framework.m4  ax_check_compile_flag.m4  ax_check_preproc_flag.m4  ax_cxx_compile_stdcxx.m4  ax_gcc_func_attribute.m4  ax_openmp.m4  ax_pthread.m4
contrib/: README.md  tidy_datadir.sh  vidulum-cli.bash-completion  vidulumd.bash-completion
contrib/amqp/: amqp_sub.py
contrib/bitrpc/: bitrpc.py
contrib/ci-workers/: README.md  unix.yml
contrib/debian/: changelog  copyright  postinst  postrm  preinst  prerm  vidulum.examples
contrib/devtools/: README.md  fix-copyright-headers.py  gen-manpages.sh  github-merge.sh  security-check.py  split-debug.sh  symbol-check.py  test-security-check.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: daira.asc  jack.asc  kevin.asc  nathan.asc  sean.asc  simon.asc
contrib/init/: bitcoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py
contrib/macdeploy/: detached-sig-apply.sh  fancy.plist
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py
contrib/spendfrom/: README.md  spendfrom.py
contrib/test-patches/: temp-revert-2.patch
contrib/testgen/: gen_base58_test_vectors.py
contrib/verify-commits/: pre-push-hook.sh
contrib/verifysfbinaries/: README.md
contrib/zmq/: zmq_sub.py
depends/: Makefile  cargo-checksum.sh  config.guess  config.site.in  config.sub  funcs.mk  packages.md
depends/builders/: darwin.mk
depends/hosts/: linux.mk  mingw32.mk
doc/: Doxyfile  amqp.md  authors.md  developer-notes.md  dnsseed-policy.md  files.md  init.md  payment-api.md  payment-disclosure.md  release-process.md  security-warnings.md  shield-coinbase.md  tor.md  translation_strings_policy.md  wallet-backup.md  zmq.md
doc/bitcoin-release-notes/: release-notes-0.10.0.md  release-notes-0.10.1.md  release-notes-0.10.3.md  release-notes-0.11.1.md  release-notes-0.11.2.md  release-notes-0.3.12.md  release-notes-0.3.15.md  release-notes-0.3.17.md  release-notes-0.3.19.md  release-notes-0.3.21.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.2.md  release-notes-0.4.3.md  release-notes-0.4.6.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md  release-notes-0.9.2.1.md  release-notes-0.9.2.md  release-notes-0.9.3.md  release-notes-0.9.4.md  release-notes-0.9.5.md
doc/man/: vidulum-fetch-params.1  vidulum-tx.1  vidulumd.1
doc/release-notes/: release-notes-0.11.2.z2.md  release-notes-0.11.2.z4.md  release-notes-0.11.2.z6.md  release-notes-0.11.2.z7.md  release-notes-0.11.2.z8.md  release-notes-0.11.2.z9.md  release-notes-1.0.0-beta1.md  release-notes-1.0.0-beta2.md  release-notes-1.0.0-rc1.md  release-notes-1.0.0-rc2.md  release-notes-1.0.0-rc4.md  release-notes-1.0.0.md  release-notes-1.0.1.md  release-notes-1.0.10-1.md  release-notes-1.0.11-rc1.md  release-notes-1.0.11.md  release-notes-1.0.12-rc1.md  release-notes-1.0.13-rc1.md  release-notes-1.0.3.md  release-notes-1.0.4.md  release-notes-1.0.6.md  release-notes-1.0.7-1.md  release-notes-1.0.7.md  release-notes-1.0.8-1.md  release-notes-1.0.8.md  release-notes-1.0.9.md
qa/pull-tester/: rpc-tests.sh  run-bitcoind-for-test.sh.in
qa/rpc-tests/: README.md  bip65-cltv-p2p.py  bipdersig-p2p.py  decodescript.py  disablewallet.py  forknotify.py  fundrawtransaction.py  getblocktemplate.py  getblocktemplate_proposals.py  getchaintips.py  hardforkdetection.py  httpbasics.py  invalidblockrequest.py  key_import_export.py  listtransactions.py  maxblocksinflight.py  mempool_coinbase_spends.py  mempool_resurrect_test.py  mempool_tx_input_limit.py  merkle_blocks.py  p2p-acceptblock.py  paymentdisclosure.py  prioritisetransaction.py  proton_test.py  proxy_test.py  pruning.py  rawtransactions.py  receivedby.py  rest.py  rpcbind_test.py  script_test.py  signrawtransactions.py  smartfees.py  txn_doublespend.py  wallet.py  wallet_1941.py  wallet_nullifiers.py  wallet_protectcoinbase.py  wallet_shieldcoinbase.py  walletbackup.py  (+3 more)
qa/snowgem/: checksec.sh  create_benchmark_archive.py  create_wallet_200k_utxos.py  full_test_suite.py  performance-measurements.sh
share/: genbuild.sh  setup.nsi.in
share/certs/: BitcoinFoundation_Apple_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  bitcoin64.xpm
src/: Makefile.am  Makefile.test.include  Makefile.vidulum.include  activemasternode.cpp  activemasternode.h  addressindex.h  addrman.cpp  addrman.h  alert.cpp  alertkeys.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  asyncrpcoperation.cpp  asyncrpcqueue.cpp  asyncrpcqueue.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  coincontrol.h  coins.cpp  coins.h  compat.h  (+99 more)
src/amqp/: amqpnotificationinterface.cpp  amqppublishnotifier.cpp  amqppublishnotifier.h  amqpsender.h
src/rpc/: net.cpp  (+10 more)
src/univalue/: Makefile.am  TODO  configure.ac
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_read.cpp  univalue_write.cpp
src/univalue/pc/: libunivalue-uninstalled.pc.in
src/univalue/test/: fail15.json  fail16.json  fail18.json  fail21.json  fail34.json  fail4.json  pass1.json  pass3.json  round7.json  unitester.cpp
zcutil/: bdb_win.patch  build-debian-package.sh  build-win.sh  build.sh  cleanup-tags.sh  fetch-params.sh  make-release.py
(+395 files in other folders)
